--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "start": "node build/index.js",
+    "build": "tsc && cp -a src/public/ dist/public",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
